--- a/WebContent/view/testRest.html
+++ b/WebContent/view/testRest.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 <script type="text/javascript" src="http://localhost:8080/JXCMS2/jquery-easyui-1.3.3/jquery.min.js"></script>
 <script type="text/javascript">
-	/* var user={userName:'hjhv',password:'111'};	
+	/* var user={userName:'管理员',password:'123'};	
 	var userStr=JSON.stringify(user);
 	$.ajax({
 		url: 'http://localhost:8080/JXCMS2/login',
@@ -22,8 +22,8 @@
 			console.log(err)
 			}
 		
-	})
-	
+	}) */
+	/*
 	$.ajax({
 		url: 'http://localhost:8080/JXCMS2/users/h/1/10',
 		type:'get',
@@ -42,12 +42,12 @@
 		
 	}) 
 	*/
-		var selectedIds = [];
+	/*var selectedIds = [];
 		for(var i = 0;i < 10;i++) {
 			//测试是否提交成功
 			selectedIds.push(i);
 		}
-		var ids = selectedIds.join(",");
+		 var ids = selectedIds.join(",");
 		//var idsJSON={'ids':ids};
 		var ids=JSON.stringify(ids);
 		alert(ids);
@@ -60,8 +60,37 @@
 				console.log(res)
 			},
 		});
-
-
+		 */
+		/* $.ajax({
+			  url: 'http://localhost:8080/JXCMS2/client',
+			  type: 'get',
+			  contentType: "application/json;charset=UTF-8",
+			  data: {client:"AAA",page:1,rows:10},
+			  success: function(res) {
+					console.log(res)
+				},
+			}); 
+		
+		 $.ajax({
+			  url: 'http://localhost:8080/JXCMS2/client',
+			  type: 'get',
+			  contentType: "application/json;charset=UTF-8",
+			  success: function(res) {
+					console.log(res)
+				},
+			}); 
+		 */
+		 $.ajax({
+			  url: 'http://localhost:8080/JXCMS2/inventorySearch',
+			  type: 'get',
+			  data:{
+				  inventoryStorageNo:'10001'
+			  },
+			  contentType: "application/json;charset=UTF-8",
+			  success: function(res) {
+					console.log(res)
+				},
+			}); 
 	</script>
 </head>
 <body>
